# kakitu-node

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DELIVERY_SUMMARY.md  Dockerfile  IMPLEMENTATION_NOTES.md  KAKITU_ARCHITECTURE.md  KAKITU_INTEGRATION_STEPS.md  KAKITU_README.md  MPESA_INTEGRATION_GUIDE.md  MPESA_SANDBOX_TESTING.md  NODE_OPERATOR_GUIDE.md  QUICK_START.md  README.md  SECURITY.md  USER_FLOW_GUIDE.md  changes.md  kakitu.spec.in  kakitu_config.json  kakitu_rpc_implementations.cpp  test_kakitu_mpesa.cpp
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  feature-request.yml  node-issue.yml
.github/workflows/: changelog.yml  code_sanitizers.yml  develop_branch_dockers_deploy.yml  docker-publish.yml  live_artifacts.yml  test_network_artifacts.yml  unit_tests.yml
docker/node/: Dockerfile  entry.sh
docs/: AUDIT-2026-03-28.md
etc/systemd/: kakitu-test.service  kakitu.service
nano/core_test/: block.cpp  telemetry.cpp  toml.cpp  uint256_union.cpp
nano/fuzzer_test/: fuzz_buffer.cpp
nano/lib/: config.cpp  config.hpp  logger_mt.hpp  numbers.cpp  rocksdbconfig.hpp  stats_enums.hpp
nano/load_test/: entry.cpp
nano/nano_node/: CMakeLists.txt  daemon.cpp  entry.cpp
nano/nano_rpc/: CMakeLists.txt  entry.cpp
nano/node/: CMakeLists.txt  active_transactions.cpp  active_transactions.hpp  blockprocessor.cpp  blockprocessor.hpp  cli.cpp  hinted_scheduler.cpp  json_handler.cpp  json_handler.hpp  kakitu_node_integration.cpp  messages.cpp  messages.hpp  mint_authority.cpp  mint_authority.hpp  mpesa_config_example.json  mpesa_config_sandbox.json  mpesa_integration.cpp  mpesa_integration.hpp  node.cpp  (+12 more)
nano/rpc/: CMakeLists.txt  kakitu_rpc.cpp
scripts/: test_mpesa_connection.sh
tools/: deploy_node.sh  generate_mint_authority.sh
(+21 files in other folders)
